www/css/frm.css
  #background {
      width: 100%;
      height: 100%;
      position: absolute;
      left: 0px;
      top: 0px;
      z-index: 0;
      opacity: 0.3;
  }
  .stretch {
      width: 100%;
      height: 100%;
      position: fixed;
  }
  .btn-info {
      background-color: #f05123;
      border-color: #ea4110;
  }
  .btn.active {
      background-color: #9eb231;
      color: white;
  }
  .readings-sample-btn {
      padding: 5px;
      background: #fff;
      border: 1px solid #ccc;
      border-radius: 3px;
      color: #333;
      text-decoration: none;
  }
  label.active {
      font-weight: bold;
  }
  span.active {
      font-weight: bold;
  }
  a {
      color: #00A2DD;
      cursor: pointer;
  }
  a:hover {
      color: #006C99;
      text-decoration: none;
  }
  /*  mobile nav */
  
  @media (min-width: 990px) {
      .mobileIcons {
          display: none;
      }
      .mobileSearch {
          display: none;
      }
      .nav-item-area:hover {
          background: #e7e7e7;
      }
      .mobileUserAccount {
          display: none;
      }
      .myMessage {
          display: none;
      }
      .marginForPanelsProg {
          margin-bottom: 325px;
      }
  }
  @media (max-width: 500px) {
      #mobileNavBar {
          display: none;
      }
      #lowerNav {
          display: inline-flex;
          padding: 10px;
          margin-left: 50%;
          transform: translateX(-50%)
      }
      .view-container {
          margin-top: 165px;
      }
      .navbar-header .nav-item-icon {
          margin: 0;
      }
      .navbar-header .glyphicon {
          margin-top: 8.5px;
      }
      .navbar-header span {
          padding: 0 12px;
      }
      #logo {
          margin-left: 50%;
          transform: translateX(-50%)
      }
  }
  @media (min-width: 500px) {
      #lowerNav {
          display: none;
      }
      .view-container {
          margin-top: 115px;
      }
  }
  @media (max-width: 991px) {
      .navbar-header {
          float: none;
      }
      .navbar-toggle {
          display: block;
      }
      .navbar-collapse {
          border-top: 1px solid transparent;
          box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
      }
      .navbar-collapse.collapse {
          display: none!important;
      }
      .navbar-nav {
          float: none!important;
          margin: 7.5px -15px;
      }
      .navbar-nav>li {
          float: none;
      }
      .navbar-nav>li>a {
          padding-top: 10px;
          padding-bottom: 10px;
      }
      .mobileIcons {
          display: block;
          display: inline-flex;
          float: right;
          margin-top: -32px;
          padding: 5px;
      }
      .nav-item-icon {
          color: black;
          margin-right: 20px;
      }
      .nav-item-area:hover {
          background: white;
      }
      .mobileSearch {
          display: block;
      }
      .myMessage {
          display: block;
          word-wrap: break-word;
      }
      .marginForPanelsProg {
          margin-bottom: 60px;
      }
  }
  /* custom panels*/
  
  .panel {
      webkit-box-shadow: 0 3px 3px #cbd5d6 !important;
      -moz-box-shadow: 0 3px 3px #cbd5d6 !important;
      -ms-box-shadow: 0 3px 3px #cbd5d6 !important;
      -o-box-shadow: 0 3px 3px #cbd5d6 !important;
      box-shadow: 0 3px 3px #cbd5d6 !important;
      border: 0!important;
  }
  .panel-title {
      font-family: 'robotoslab_light', sans-serif!important;
  }
  .panel-primary > .panel-heading {
      padding-bottom: 10px;
      padding-top: 10px;
  }
  .columnsSplit {
      text-align: center;
      cursor: pointer;
      color: white!important;
      background: black;
      height: 30px;
      font-family: 'robotoslab_light', sans-serif!important;
      font-size: 18px;
  }
  .columnsSplit:hover {
      cursor: pointer;
      color: black!important;
      background: white;
  }
  /* Custom Classes */
  
  #myAccountUserImage {
      border-radius: 50%;
  }
  #userImage {
      border-radius: 50%;
      width: 100px;
      height: 100px;
  }
  #userImageNav {
      border-radius: 50%;
      width: 35px;
      height: 35px;
  }
  .correctAnswerText {
      color: #b0c636;
  }
  .correctAnswer {
      background-color: #b0c636;
  }
  .incorrectAnswer {
      background-color: #F05123;
  }
  .flaggedQuestion {
      background-color: #00A2DD;
  }
  .skippedQuestion {
      background-color: #FDB515;
  }
  .exam-results-correct {
      display: inline-block;
      border-radius: 30px;
      width: 30px;
      height: 30px;
      background-color: #b0c636;
      color: #FFFFFF;
      padding-left: 10px;
      padding-top: 5px;
  }
  .exam-results-incorrect {
      display: inline-block;
      border-radius: 30px;
      width: 30px;
      height: 30px;
      background-color: #F05123;
      color: #FFFFFF;
      padding-left: 10px;
      padding-top: 5px;
  }
  .exam-results-skipped {
      display: inline-block;
      border-radius: 30px;
      width: 30px;
      height: 30px;
      background-color: #FDB515;
      color: #FFFFFF;
      padding-left: 10px;
      padding-top: 5px;
  }
  .exam-results-flagged {
      display: inline-block;
      border-radius: 30px;
      width: 30px;
      height: 30px;
      background-color: #00A2DD;
      color: #FFFFFF;
      padding-left: 10px;
      padding-top: 5px;
  }
  .examSiteSelected {
      background-color: #006C99;
  }
  .view-frame {
      height: 100%;
  }
  .nav-item-area {
      text-align: center;
  }
  .nav-right-area {
      margin-top: 5px;
  }
  .nav-item-icon {
      font-size: 18px;
      margin-top: 9px;
  }
  .nav-icon-search {
      padding-right: 10px;
      color: #FFFFFF;
  }
  .nav-photo {
      margin-top: 10px;
  }
  #mainnav-glossary {
      display: none;
  }
  .login-backdrop-top {
      width: 100%;
      height: 50%;
      min-height: 400px;
  }
  .login-backdrop-bottom {
      width: 100%;
      height: 50%;
      background-color: #CBD5D6;
  }
/* ... */

